# StopClock

./: Makefile.am  StopClock-uninstalled.pc.in  StopClock.pc.in  TODO  configure.ac
include/: Makefile.am
include/StopClock/: Makefile.am  StopClock.h
src/: Makefile.am  StopClock.cpp
