## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

libstopclock_includedir = $(pkgincludedir)

libstopclock_include_DATA = \
	StopClock.h

EXTRA_DIST = $(libstopclock_include_DATA)
